--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 scikit-learn<2.0.0
-more-itertools>=8.6.0,<9
-graphviz==0.14
-pandas>1.0.0,<2.0.0
-frozendict==2.3.0
-pm4py==2.2.19.1
+more-itertools
+graphviz<1
+pandas>2.0.0,<3.0.0
+frozendict<3
+pm4py==2.7.11.14
 psutil>=5.7.2
-lru-dict==1.1.6
-seaborn==0.11.1
+lru-dict
+seaborn<1.0.0
 sgt==2.0.3
